@@ -14,6 +14,7 @@ V0.10.9
  * Take care of thin progressbars with an expanding vertical policy.
  * KvYaru is added and KvCommunitheme is removed.
  * Fixed Dock specific close and restore buttons.
+ * Made dock splitters like other ones (by setting PM_DockWidgetSeparatorExtent) and dealt with too tall splitters.
 
 V0.10.8
 ---------
